2008-12-18  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (xg_frame_resized): Remove check if rows/columns have
	changed.

2008-12-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs.c (main): Print and error and exit when no data is read
	from the pipe.

2008-12-17  Jason Rumney  <jasonr@gnu.org>

	* w32font.c (w32font_has_char): Always return -1.

2008-12-16  Kenichi Handa  <handa@m17n.org>

	* font.c (font_open_entity): Fix previous change.

2008-12-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* process.c: Include <limits.h>.

2008-12-16  Chetan Pandya  <pandyacus@sbcglobal.net>  (tiny change)

	* font.c (font_update_drivers): Fix mistake in reconstructing the
	driver list.

2008-12-16  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (font_clear_cache): Fix format of font cache data.

2008-12-15  Chong Yidong  <cyd@stupidchicken.com>

	* xftfont.c (xftfont_open): Free Xft font pattern if
	XftFontOpenPattern fails.

	* xterm.c (x_free_frame_resources): Remove extraneous call to
	free_frame_faces.

2008-12-13  Chong Yidong  <cyd@stupidchicken.com>

	* xterm.c (x_delete_display): Move xim_close_dpy call to
	x_delete_terminal.
	(x_delete_terminal): Call xim_close_dpy.

2008-12-13  Jason Rumney  <jasonr@gnu.org>

	* w32font.c (intern_font_name): New function.
	(add_font_name_to_list, w32_enumfont_pattern_entity): Use it.
	(w32font_open_internal, Fx_select_font): Decode font name.
	(fill_in_logfont, list_all_matching_fonts): Encode font name.

	* w32font.h (intern_font_name): Declare new function.

	* w32uniscribe.c (add_opentype_font_name_to_list):
	Use intern_font_name.

2008-12-13  Chong Yidong  <cyd@stupidchicken.com>

	* frame.c (Fdelete_frame): Call free_font_driver_list.

	* font.c (free_font_driver_list): Implement missing function.

	* w32term.c (w32_term_init): Don't initialize the image cache
	here; it will be done in init_frame_faces.

	* xterm.h (struct xim_inst_t): Definition moved from xterm.c.
	(struct x_display_info): Remove unused member null_pixel.  New